# zero2prod

./: .dockerignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: container.yml  general.yml
.sqlx/: query-08b42b176e0efdb3ee16eedddacecdaa88bca9a8d4607b4790277b53e23c5e54.json  query-20a814ab0c8bf7c5a58827ad94d68e51c02147fa81523edd7e9a30fce3aff564.json  query-4a4e34092e9f27c7d3d0dfef9fba7e338241198533fdee2842b56258b863401e.json  query-badd43c4037705f600b4723e51068b018dacfe44a0a183858f5ce8f23c59727e.json  query-d195dd1c529acf07c9339aedf4773abab34697ab7df93ffc4b3a936abc7fe859.json  query-fbd92c460e4b173e6c2b4e5f0b25f8e29706b188eaab22326d31b921ff25d090.json
configuration/: base.yaml  local.yaml  production.yaml
kube/: README.md  api-deployment.yaml  api-ingress.yaml  api-service.yaml
migrations/: 20230827181145_create_subscriptions_table.up.sql  20230915223720_make_status_not_null_in_subscriptions.down.sql  20230915223720_make_status_not_null_in_subscriptions.up.sql  20230915224540_create_subscription_tokens_table.up.sql  20230925101148_create_users_table.up.sql  20231003101650_seed_user.down.sql  20231003101650_seed_user.up.sql  20231010134214_create_idempotency_table.down.sql  20231010134214_create_idempotency_table.up.sql  20231016112235_create_newsletter_issues_table.down.sql  20231016112235_create_newsletter_issues_table.up.sql  20231018092636_create_issue_delivery_queue_table.down.sql  20231018092636_create_issue_delivery_queue_table.up.sql
scripts/: init_db.sh  init_opentelementry.sh  init_redis.sh
src/: authorization.rs  configuration.rs  email_client.rs  error.rs  issue_delivery_worker.rs  lib.rs  main.rs  metrics.rs  require_login.rs  service.rs  state.rs  telemetry.rs
src/authorization/: password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: admin.rs  docs.rs  health.rs  mod.rs  newsletters.rs  subscribe.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs  newsletters.rs  password.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  mod.rs  post.rs
src/routes/subscriptions/: subscriptions_confirm.rs
src/service/: flash_message.rs  user.rs
src/state/: session.rs
src/views/: home.html
templates/: admin_dashboard.html  base.html  home.html  login.html
templates/admin/: change_password_form.html  publish_newsletter.html
tests/: health.rs  subscribe.rs
tests/api/: admin_dashboard.rs  change_password.rs  docs.rs  health.rs  login.rs  main.rs  newsletter.rs  subscribe.rs  subscriptions.rs  subscriptions_confirm.rs  utils.rs
tests/common/: mod.rs
