[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = ["http2", "tracing", "macros"] }
axum-extra = { version = "0.9.0", features = [
  "cookie",
  "cookie-signed",
  "typed-header",
] }
base64 = "0.21.5"
chrono = { version = "0.4.31", default-features = false, features = [
  "clock",
  "serde",
] }
config = "0.13.4"
cookie = "0.18.0"
derive-getters = "0.3.0"
duplicate = "1.0.0"
http = "1.0.0"
hyper = "1.0.1"
lazy_static = "1.4.0"
opentelemetry = { version = "0.21.0" }
opentelemetry-otlp = "0.14.0"
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
prometheus = "0.13.3"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "cookies",
  "rustls-tls",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-aux = "4.2.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = [
  "trace",
  "request-id",
  "util",
  "fs",
] }
tower-sessions = { version = "0.7.0", features = ["redis-store"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
] }
unicode-segmentation = "1.10.1"
url = "2.5.0"
urlencoding = "2.1.3"
utoipa = { version = "4.1.0", features = [
  "axum_extras",
  "yaml",
  "chrono",
  "uuid",
] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
validator = "0.16.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[build-dependencies]
vergen = { version = "8.2.6", features = ["git", "gitoxide", "time", "build"] }

[dev-dependencies]
claims = "0.7.1"
fake = { version = "2.9.1", features = ["derive"] }
hyper = "1.0.1"
linkify = "0.10.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
proptest = "1.4.0"
reqwest = "0.11.22"
rstest = "0.18.2"
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
wiremock = "0.5.22"

[profile.release]
strip = true
